--- a/wordle_helper.html
+++ b/wordle_helper.html
@@ -56,7 +56,7 @@
 			}
 
 
-			input {
+			.letter {
 				font-size: 150%;
 				width: 25px;
 				text-align: center;
@@ -100,6 +100,22 @@
 				margin-top: 5px;
 				margin-bottom: 5px;
 			}
+
+			.skipcontainer {
+				margin-left: auto;
+  				margin-right: auto;
+				margin-top: 5px;
+				margin-bottom: 5px;
+			}
+
+			.skipinput {
+				font-size: 100%;
+				text-align: left;
+				border-width: 1px;
+				border-style: solid;
+				border-color: rgb(145, 145, 145);
+			}
+
 		</style>
 
 		<script>
@@ -117,6 +133,7 @@ window.onload =  () => {
 	i3 = document.getElementById("l3");
 	i4 = document.getElementById("l4");
 	i5 = document.getElementById("l5");
+	skipinput = document.getElementById("skips");
 
 	i1.addEventListener('keyup', upper, false);
 	i2.addEventListener('keyup', upper, false);
@@ -129,6 +146,8 @@ window.onload =  () => {
 	i3.addEventListener('focus', checkempty, false);
 	i4.addEventListener('focus', checkempty, false);
 	i5.addEventListener('focus', checkempty, false);
+
+	skipinput.addEventListener('focusout', upper);
 
 	i1.select();
 }
@@ -194,6 +213,8 @@ function getResults() {
 	rHits.innerHTML = "";
 	let rString = "";
 	let array;
+	let filtered = [];
+	let finalresult = [];
 		
 	// Choose selected language
 	switch (lval) {
@@ -216,16 +237,38 @@ function getResults() {
 			break;
 	}
 
+	// Pre-Filter words
 	array.forEach((i) => {
 		if(match = i.match(regex)) {
+			filtered.push(i);
+		};
+	});
+
+	// Filter words with excluded characters
+	let filterstring = skipinput.value;
+	console.log("Filter string: " + filterstring);
+	filtered.forEach((j) => {
+		let go = true;
+		for (const f of filterstring) {
+			if (j.indexOf(f) >= 0) {
+				console.log("Skipping: " + j + " due to exclusion");
+				go = false;
+			}
+		}
+
+		if (go) {
+			//finalresult.push(j);
 			let tr = document.createElement('tr');
 			let td = document.createElement('td');
-			td.appendChild(document.createTextNode(i));
+			td.appendChild(document.createTextNode(j));
 			tr.appendChild(td);
 			rTable.appendChild(tr);
 			hit++;
-		};
+		}
+
 	});
+	
+
 	
 	if (hit) {
 		rHits.innerHTML = hit + " results:";
@@ -245,11 +288,11 @@ function getResults() {
 		<div class="container">
 			<div class=top>Wordle Helper</div>
 			<div class="inputs" style="text-align:center">
-				<input type="text" id="l1" name="l1" maxlength="1" size="1" onfocus="this.select();">
-				<input type="text" id="l2" name="l2" maxlength="1" size="1" onfocus="this.select();">
-				<input type="text" id="l3" name="l3" maxlength="1" size="1" onfocus="this.select();">
-				<input type="text" id="l4" name="l4" maxlength="1" size="1" onfocus="this.select();">
-				<input type="text" id="l5" name="l5" maxlength="1" size="1" onfocus="this.select();"><br><br>
+				<input class="letter" type="text" id="l1" name="l1" maxlength="1" size="1" onfocus="this.select();">
+				<input class="letter" type="text" id="l2" name="l2" maxlength="1" size="1" onfocus="this.select();">
+				<input class="letter" type="text" id="l3" name="l3" maxlength="1" size="1" onfocus="this.select();">
+				<input class="letter" type="text" id="l4" name="l4" maxlength="1" size="1" onfocus="this.select();">
+				<input class="letter" type="text" id="l5" name="l5" maxlength="1" size="1" onfocus="this.select();"><br><br>
 			</div>
 			<div class="lcontainer">
 				<label for="lang">Language:</label>
@@ -258,6 +301,9 @@ function getResults() {
 					<option value="de">Deutsch</option>
 					<option value="es">Español</option>
 				</select>
+			</div>
+			<div class="skipcontainer">Exclude Letters:				
+				<input class="skipinput" type="text" id="skips" name="skips" maxlength="30" size="20" placeholder="XYZ (optional)" onfocus="this.select();">
 			</div>
 			<div class="dbutton" style="text-align:center">
 				<button type="button" class="gbutton" onclick="getResults();">Get Words</button>
@@ -270,8 +316,9 @@ function getResults() {
 				<hr>
 				<p>How to use:<p>
 				<ul>
-					<li>Fill in the letters with know position - leave others blank</li>
-					<li>Use &#8592; and &#8594; arrow keys to navigate</li>
+					<li>Fill in the letters with know position - leave others blank<BR>
+					Use &#8592; and &#8594; arrow keys to navigate</li>
+					<li>Enter already ruled out letters in "Exclude Letters" list (optional)</li>
 					<li>Click "Get Words" to show all remaining possibilities</li>
 				</ul>
 				<p>2022 by <a href="https://github.com/Gru80/wordle-helper/" target="_blank">Martin Eder</a><br>
